@@ -56,11 +56,27 @@ save_and_view_log = function()
   }
 </tmpl_if>
 
-<tmpl_unless add_mode>
+<tmpl_if add_mode>
+  do_cancel_add = function()
+  {
+    if (confirm(Krang.L10N.loc("Discard new Media?"))) {
+      Krang.Form.submit( 'edit_media_form', { rm: 'find' });
+    }
+  }
+<tmpl_else>
+  do_cancel_edit = function()
+  { 
+    if (confirm(Krang.L10N.loc(<tmpl_if cancel_goes_to_workspace>"Discard any unsaved changes and go to Workspace?"
+                               <tmpl_else><tmpl_if cancel_changes_owner>"Discard any changes and check the Media back in?"
+                               <tmpl_else>"Discard any unsaved changes and go back to Find Media screen?"
+                               </tmpl_if></tmpl_if>))) {
+        Krang.Form.submit( 'edit_media_form', {rm: 'cancel_edit'});
+    }
+  }
   do_delete = function()
   {
     if ( confirm( Krang.L10N.loc('Are you SURE you want to delete this Media?') ) )
-      Krang.Form.submit( 'delete_media_form'<tmpl_if add_mode>, { rm: 'cancel_add' }</tmpl_if> );
+      Krang.Form.submit( 'delete_media_form' );
   }
 
   revert_version = function()
@@ -73,12 +89,7 @@ save_and_view_log = function()
   {
     Krang.Form.submit('edit_media_form', { rm: 'view_version' });
   }
-<tmpl_else>
-  do_cancel = function()
-  {
-    Krang.Form.submit( 'edit_media_form', { rm: 'find' });
-  }
-</tmpl_unless>
+</tmpl_if>
 
 // Register CodePress's onload event:
 Krang.onload( function() { 
@@ -270,9 +281,7 @@ Krang.onload( function() {
 </table>
 
 <div class="panel capped<tmpl_if add_mode> clearfix</tmpl_if>">
-<tmpl_if add_mode>
-  <input value="<tmpl_lang Cancel>" onclick="do_cancel()" type="button" class="west">
-</tmpl_if>
+<input value="<tmpl_lang Cancel>" onclick="do_cancel_<tmpl_if add_mode>add<tmpl_else>edit</tmpl_if>()" type="button" class="west">
 <input value="<tmpl_lang Save &amp; Stay>" onclick="do_save_stay()" type="button">
 <input value="<tmpl_lang Save>" onclick="do_save()" type="button">
 <tmpl_if may_publish>
