@@ -54,7 +54,7 @@ save_and_view_log = function()
   do_cancel_add = function()
   {
     if (confirm(Krang.L10N.loc("Discard new Template?"))) {
-      Krang.Form.submit( 'edit_template_form', { rm: 'add_cancel' });
+      Krang.Form.submit( 'edit_template_form', { rm: 'search' });
     }
   }
 <tmpl_else>
@@ -62,7 +62,7 @@ save_and_view_log = function()
   {
     if (confirm(Krang.L10N.loc(<tmpl_if cancel_goes_to_workspace>"Discard any unsaved changes and go to Workspace?"
                                <tmpl_else><tmpl_if cancel_changes_owner>"Discard any changes and check the Template back in?"
-                               <tmpl_else>"Discard any changes and go back to where you opened the Template?"
+                               <tmpl_else>"Discard any unsaved changes and go back to Find Template screen?"
                                </tmpl_if></tmpl_if>))) {
        Krang.Form.submit( 'edit_template_form', {rm: 'cancel_edit'});
     }
